# The-Plazza

./: .gitignore  CMakeLists.txt  README.md  cbuild  file
.github/workflows/: mirror.yml
bonus/: CMakeLists.txt
bonus/include/: AButton.hpp  Command.hpp  DropDownButton.hpp  KitchenDisplay.hpp  Plazza.hpp  PresseButton.hpp  Reception.hpp  UtilsSfml.hpp
bonus/src/: AButton.cpp  Command.cpp  Connect.cpp  KitchenDisplay.cpp  Main.cpp  Plazza.cpp  Reception.cpp
docs/: developper_doc.md
include/: Chef.hpp  Connect.hpp  Cook.hpp  Exception.hpp  IPC.hpp  IngredientMap.hpp  Kitchen.hpp  Packet.hpp  Plazza.hpp  Reception.hpp  SafeQueue.hpp  SafeStock.hpp  Utils.hpp  Waiter.hpp
public/: help.txt
src/: Chef.cpp  Connect.cpp  Cook.cpp  IngredientMap.cpp  Kitchen.cpp  Main.cpp  Plazza.cpp  Reception.cpp  SafeStock.cpp  Utils.cpp  Waiter.cpp
tests/: tests_init.cpp  tests_parse_order.cpp  tests_parsing.cpp
